--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -483,7 +483,7 @@
                       {{ form | payment_button }}
                     {%- endif -%}
                   </div>
-                  <a class="klaviyo-bis-trigger" href="#" {% if current_variant.available %}style="display:none;"{% endif %}>Notify Me When Available</a>
+                  <a class="klaviyo-bis-trigger" href="#" {% if product.selected_or_first_available_variant.available %}style="display:none;"{% endif %}>Notify Me When Available</a>
                 {%- endform -%}
               </product-form>
 
