--- a/assets/LPS-custom.css
+++ b/assets/LPS-custom.css
@@ -98,6 +98,9 @@ a:hover{
 
 /* NAV */
 
+.cart-notification__heading.text-body {
+  color: var(--white);
+}
 /* center desktop menu */
 @media screen and (min-width: 990px){
   .header {
