--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -255,12 +255,9 @@
             <h1 class="product__title {{ title_class }}" {{ block.shopify_attributes }}>
               {{ new_title }}
             </h1>
-{% comment %}Start automatically added Judge.me widget{% endcomment %}
-  <div class="product__text">
-    {% render 'judgeme_widgets', widget_type: 'judgeme_preview_badge', concierge_install: true, product: product %}
-  </div>
-{% comment %}End automatically added Judge.me widget{% endcomment %}
 
+
+          {% render 'judgeme_widgets', widget_type: 'judgeme_preview_badge', jm_style: '', concierge_install: true, product: product %}
           {%- when 'price' -%}
             <div class="no-js-hidden" id="price-{{ section.id }}" role="status" {{ block.shopify_attributes }}>
               {%- render 'price', product: product, use_variant: true, show_badges: true, price_class: 'price--large' -%}
@@ -605,11 +602,6 @@
       </div>
     </modal-dialog>
   {%- endfor -%}
-
-
-{% comment %}Start automatically added Judge.me widget{% endcomment %}
-  {% render 'judgeme_widgets', widget_type: 'judgeme_review_widget', concierge_install: true, product: product %}
-{% comment %}End automatically added Judge.me widget{% endcomment %}
 </section>
 
 {% javascript %}
