--- a/templates/page.tech-boot-lacing.liquid
+++ b/templates/page.tech-boot-lacing.liquid
@@ -14,7 +14,7 @@
     <div class="row gx-5 mt-5 overline">
       <div class="col-12 mb-5 d-flex flex-column">
         <a id="boot-tech-lacing" style="position:absolute; top: -50px;"></a>
-        <h2 class="mb-3"><span style="position:relative;">BOA<sup>&#174;</sup></span> Technology. <span>The BOA<sup>&#174;</sup> Advantage.</span></h2>
+        <h2 class="mb-3"><b style="position:relative;">BOA<sup>&#174;</b></span> Technology. <span>The BOA<sup>&#174;</sup> Advantage.</span></h2>
         <div class="bg-white p-3 pb-1 mb-5">
           <p>We designed our boot collection to work with specific BOA<sup>&#174;</sup> Fit Systems to create seamless connections and easy on-the-fly adjustability. We use three different lacing BOA<sup>&#174;</sup> Fit Systems to complement our boots intended flex and riding style.</p>
         </div>
