--- a/snippets/LPS-policy.liquid
+++ b/snippets/LPS-policy.liquid
@@ -50,13 +50,13 @@
         <h2>{{ short_name }}{% if policy.title contains " policy" %}<br>Policy{% endif %}</h2>
         <span class="separator"></span>
         {% if policy.title contains "Shipping" %}
-        <p class="mt-5">For more information about our shipping policies, if you have questions, or if you would like to make a complaint, please <a href="/pages/contact-us">contact us</a> or by post using the details provided below:</p>
+        <p class="mt-5">For more information about our shipping policies, if you have questions, or if you would like to make a complaint, please <a href="/pages/contact">contact us</a> or by post using the details provided below:</p>
         {% elsif policy.title contains "Privacy" %}
-        <p class="mt-5">For more information about our privacy practices, if you have questions, or if you would like to make a complaint, please <a href="/pages/contact-us">contact us</a> or by post using the details provided below:</p>
+        <p class="mt-5">For more information about our privacy practices, if you have questions, or if you would like to make a complaint, please <a href="/pages/contact">contact us</a> or by post using the details provided below:</p>
         {% elsif policy.title contains "Refund" %}
-        <p class="mt-5">For more information about our refund policies, if you have questions, or if you would like to make a complaint, please <a href="/pages/contact-us">contact us</a> or by post using the details provided below:</p>
+        <p class="mt-5">For more information about our refund policies, if you have questions, or if you would like to make a complaint, please <a href="/pages/contact">contact us</a> or by post using the details provided below:</p>
         {% elsif policy.title contains "Terms" %}
-        <p class="mt-5">For more information about our Terms and Conditions, if you have questions, or if you would like to make a complaint, please <a href="/pages/contact-us">contact us</a> or by post using the details provided below:</p>
+        <p class="mt-5">For more information about our Terms and Conditions, if you have questions, or if you would like to make a complaint, please <a href="/pages/contact">contact us</a> or by post using the details provided below:</p>
         {% else %}
         <p class="mt-5">For more information, if you have questions, or if you would like to make a complaint, please <a href="/pages/contact-us">contact us</a> or by post using the details provided below:</p>
         {% endif %}
