--- a/templates/page.tech-board-shapes.liquid
+++ b/templates/page.tech-board-shapes.liquid
@@ -121,7 +121,7 @@ a catch-free riding experience.</p>
         <a id="board-tech-hotrods" style="position:absolute; top: -50px;"></a>
         <h2 class="mb-3">Camber and Shape.</h2>
         <div class="row gx-5">
-          <div class="col-12 col-md-8 py-5">
+          <div class="col-12 col-md-8 pb-5">
             <h3 class="my-3">CAMBER</h3>
             <div class="row gx-5">
               <div class="col-12 col-md-6 my-5 d-flex flex-column">
@@ -173,7 +173,7 @@ a catch-free riding experience.</p>
               </div>
             </div>
           </div>
-          <div class="col-12 col-md-4 py-5">
+          <div class="col-12 col-md-4 pb-5">
             <h3 class="my-3">SHAPING</h3>
             <div class="row gx-5">
               <div class="col-12 my-5 d-flex flex-column">
